Bug 309623 - I was trying to delete the upper value of the range of values to enter my own value
Summary: I was trying to delete the upper value of the range of values to enter my own...
Status: RESOLVED FIXED
Alias: None
Product: kalgebra
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-06 02:44 UTC by Bradlee Sargent
Modified: 2012-11-23 11:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bradlee Sargent 2012-11-06 02:44:48 UTC
Application: kalgebra (0.11)
KDE Platform Version: 4.9.2
Qt Version: 4.8.3
Operating System: Linux 3.5.0-18-generic x86_64
Distribution: Ubuntu 12.10

-- Information about the crash:
I started kalgebra, I entered my formula, then I started to enter the upper x value, but first, I had to delete the existing x value.

The crash can be reproduced some of the time.

-- Backtrace:
Application: KAlgebra (kalgebra), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fed329d67c0 (LWP 3079))]

Thread 2 (Thread 0x7fed29c77700 (LWP 3080)):
#0  0x00007fed3e7e7303 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fed377ded84 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fed377deea4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fed3f263c16 in QEventDispatcherGlib::processEvents (this=0x7fed240008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007fed3f2342bf in QEventLoop::processEvents (this=this@entry=0x7fed29c76d90, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fed3f234548 in QEventLoop::exec (this=0x7fed29c76d90, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007fed3f135b10 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007fed3f2149af in QInotifyFileSystemWatcherEngine::run (this=0x22a7690) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007fed3f138aec in QThreadPrivate::start (arg=0x22a7690) at thread/qthread_unix.cpp:338
#9  0x00007fed37cade9a in start_thread (arg=0x7fed29c77700) at pthread_create.c:308
#10 0x00007fed3e7f2cbd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fed329d67c0 (LWP 3079)):
[KCrash Handler]
#6  Analitza::Analyzer::calc (this=this@entry=0x7fff15bcaed0, root=<optimized out>) at ../../analitza/analyzer.cpp:612
#7  0x00007fed42167eb1 in Analitza::Analyzer::calculate (this=0x7fff15bcaed0) at ../../analitza/analyzer.cpp:213
#8  0x0000000000420235 in calcExp (exp=..., v=<optimized out>, corr=corr@entry=0x7fff15bcaf6f) at ../../src/functionedit.cpp:168
#9  0x0000000000421d0e in FunctionEdit::updateDownlimit (this=0x224bb40) at ../../src/functionedit.cpp:195
#10 0x00007fed3f24af5f in QMetaObject::activate (sender=0x22b69d0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#11 0x00007fed3f24af5f in QMetaObject::activate (sender=0x22ba960, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#12 0x00007fed3fe65cbd in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=<optimized out>, _c=<optimized out>) at .moc/release-shared/moc_qtextcontrol_p.cpp:131
#13 QTextControl::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at .moc/release-shared/moc_qtextcontrol_p.cpp:125
#14 0x00007fed3fe6603f in QTextControl::qt_metacall (this=0x22ba960, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff15bcb2e0) at .moc/release-shared/moc_qtextcontrol_p.cpp:207
#15 0x00007fed3f24b123 in QMetaObject::activate (sender=0x22bd100, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3566
#16 0x00007fed3fe9d3ba in QTextDocumentPrivate::finishEdit (this=this@entry=0x22bdaf0) at text/qtextdocument_p.cpp:1246
#17 0x00007fed3fe9f7e9 in QTextDocumentPrivate::remove (this=0x22bdaf0, pos=0, length=1, op=QTextUndoCommand::MoveCursor) at text/qtextdocument_p.cpp:684
#18 0x00007fed3febfb63 in QTextCursorPrivate::remove (this=0x2685390) at text/qtextcursor.cpp:175
#19 0x00007fed3fec4d32 in QTextCursor::deletePreviousChar (this=0x7fff15bcb500) at text/qtextcursor.cpp:1545
#20 0x00007fed3fe64e8d in QTextControlPrivate::keyPressEvent (this=this@entry=0x22b6a60, e=e@entry=0x7fff15bcc150) at text/qtextcontrol.cpp:1230
#21 0x00007fed3fe6785b in QTextControl::processEvent (this=<optimized out>, e=0x7fff15bcc150, matrix=..., contextWidget=<optimized out>) at text/qtextcontrol.cpp:946
#22 0x00007fed3fe5c763 in QTextControl::processEvent (this=0x22ba960, e=0x7fff15bcc150, coordinateOffset=..., contextWidget=0x22aa9b0) at text/qtextcontrol.cpp:906
#23 0x00007fed400b22cc in sendControlEvent (e=0x7fff15bcc150, this=0x22b6dd0) at widgets/qplaintextedit_p.h:136
#24 QPlainTextEdit::keyPressEvent (this=<optimized out>, e=0x7fff15bcc150) at widgets/qplaintextedit.cpp:1698
#25 0x00007fed41f217e4 in ExpressionEdit::keyPressEvent (this=0x22b69d0, e=0x7fff15bcc150) at ../../analitzagui/expressionedit.cpp:244
#26 0x00007fed3fc668db in QWidget::event (this=0x22b69d0, event=0x7fff15bcc150) at kernel/qwidget.cpp:8406
#27 0x00007fed40015b66 in QFrame::event (this=0x22b69d0, e=0x7fff15bcc150) at widgets/qframe.cpp:557
#28 0x00007fed4009582b in QAbstractScrollArea::event (this=0x22b69d0, e=0x7fff15bcc150) at widgets/qabstractscrollarea.cpp:996
#29 0x00007fed400b12d7 in QPlainTextEdit::event (this=0x22b69d0, e=0x7fff15bcc150) at widgets/qplaintextedit.cpp:1520
#30 0x00007fed3fc16e9c in QApplicationPrivate::notify_helper (this=this@entry=0x1f978c0, receiver=receiver@entry=0x22b69d0, e=e@entry=0x7fff15bcc150) at kernel/qapplication.cpp:4562
#31 0x00007fed3fc1be84 in QApplication::notify (this=<optimized out>, receiver=0x22b69d0, e=0x7fff15bcc150) at kernel/qapplication.cpp:4003
#32 0x00007fed4091f1d6 in KApplication::notify (this=0x7fff15bcd060, receiver=0x22b69d0, event=0x7fff15bcc150) at ../../kdeui/kernel/kapplication.cpp:311
#33 0x00007fed3f23556e in QCoreApplication::notifyInternal (this=0x7fff15bcd060, receiver=0x22b69d0, event=0x7fff15bcc150) at kernel/qcoreapplication.cpp:915
#34 0x00007fed3fcb7e79 in QKeyMapper::sendKeyEvent (keyWidget=keyWidget@entry=0x22b69d0, grab=grab@entry=false, type=QEvent::KeyPress, code=16777219, modifiers=..., text=..., autorepeat=autorepeat@entry=false, count=1, nativeScanCode=22, nativeVirtualKey=65288, nativeModifiers=0) at kernel/qkeymapper_x11.cpp:1866
#35 0x00007fed3fcb82b1 in QKeyMapperPrivate::translateKeyEvent (this=0x1fdce70, keyWidget=0x22b69d0, event=0x7fff15bccb80, grab=<optimized out>) at kernel/qkeymapper_x11.cpp:1836
#36 0x00007fed3fc93ed9 in QApplication::x11ProcessEvent (this=0x7fff15bcd060, event=0x7fff15bccb80) at kernel/qapplication_x11.cpp:3630
#37 0x00007fed3fcbbfa2 in x11EventSourceDispatch (s=0x1f92d20, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#38 0x00007fed377deab5 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#39 0x00007fed377dede8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#40 0x00007fed377deea4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#41 0x00007fed3f263bf6 in QEventDispatcherGlib::processEvents (this=0x1f28b30, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#42 0x00007fed3fcbbc1e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#43 0x00007fed3f2342bf in QEventLoop::processEvents (this=this@entry=0x7fff15bccf50, flags=...) at kernel/qeventloop.cpp:149
#44 0x00007fed3f234548 in QEventLoop::exec (this=0x7fff15bccf50, flags=...) at kernel/qeventloop.cpp:204
#45 0x00007fed3f239708 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#46 0x0000000000414ca3 in main (argc=1, argv=0x7fff15bcd198) at ../../src/main.cpp:41

Reported using DrKonqi
Comment 1 Aleix Pol 2012-11-23 03:00:37 UTC
Git commit aacb2c0e490bcb4507ec38e1d20d64ddea503194 by Aleix Pol.
Committed on 23/11/2012 at 03:59.
Pushed by apol into branch 'KDE/4.9'.

Don't say that an expressionedit is correct if it's empty

M  +9    -9    analitzagui/expressionedit.cpp
M  +1    -1    analitzagui/expressionedit.h

http://commits.kde.org/analitza/aacb2c0e490bcb4507ec38e1d20d64ddea503194
Comment 2 Aleix Pol 2012-11-23 03:00:37 UTC
Git commit fd9dc448da5c80196286ffb347b2f4ceddbc82de by Aleix Pol.
Committed on 23/11/2012 at 03:59.
Pushed by apol into branch 'master'.

Don't say that an expressionedit is correct if it's empty

M  +9    -9    analitzagui/expressionedit.cpp
M  +1    -1    analitzagui/expressionedit.h

http://commits.kde.org/analitza/fd9dc448da5c80196286ffb347b2f4ceddbc82de
Comment 3 Aleix Pol 2012-11-23 03:02:43 UTC
Git commit 12e6f3bad539251e1531461c998f608c8d8f8f54 by Aleix Pol.
Committed on 23/11/2012 at 04:02.
Pushed by apol into branch 'KDE/4.9'.

Fix crash when having an empty up/down limit in the function edit

M  +6    -6    src/functionedit.cpp

http://commits.kde.org/kalgebra/12e6f3bad539251e1531461c998f608c8d8f8f54
Comment 4 Aleix Pol 2012-11-23 03:02:43 UTC
Git commit 610cfe27c8242c1799c7ab841895c74748181439 by Aleix Pol.
Committed on 23/11/2012 at 04:02.
Pushed by apol into branch 'master'.

Fix crash when having an empty up/down limit in the function edit

M  +6    -6    src/functionedit.cpp

http://commits.kde.org/kalgebra/610cfe27c8242c1799c7ab841895c74748181439