Fix crash when having an empty up/down limit in the function edit

BUG: 309623